@@ -20,8 +20,8 @@
             <li><strong>Image Size:</strong> <span tal:content="field/image">content size</span></li>
             <li><strong>Crop Size:</strong>&nbsp;&nbsp;&nbsp;&nbsp;<span id="crop_size">0x0px</span></li>
         </ul>
-        <h3 class="warning">*Warning: Hitting the crop button will replace the original image with this cropped image</h3>
-      <input disabled="disabled" class="standalone" id="image-recrop" type="submit" value="Crop" name="recrop" i18n:attributes="value"/>
+        <h3 class="warning">*Note: Hitting the crop button will replace the original image with this cropped image</h3>
+      <input  class="standalone hidden" id="image-recrop" type="submit" value="Crop" name="recrop" i18n:attributes="value"/>
     </div>
     <div class="visualClear" />
   </form>
